--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ tree-sitter-c = { version = "0.21", optional = true }
 tree-sitter-go = { version = "0.21", optional = true }
 tree-sitter-python = { version = "0.21", optional = true }
 qdrant-client = {version = "1.8.0", optional = true }
+firestore_db_and_auth = "0.20"
 
 [features]
 default = []
